# soccer-simulator

./: .gitignore  CMakeLists.txt  LICENSE
scene/: cube.json  cubeSphere.json  small.json  soccer.json  sphereKZ.json
shaders/: Bump.frag  Custom.frag  Diffuse.frag  Displacement.vert  Kazakhstan.frag  Mirror.frag  Phong.frag  Texture.frag
src/: CMakeLists.txt  Skybox.frag  Skybox.vert  ball.cpp  ball.h  ballMesh.h  cloth.cpp  cloth.h  clothMesh.cpp  clothMesh.h  clothSimulator.cpp  clothSimulator.h  goalnet.cpp  goalnet.h  main.cpp  pointMass.h  shaderUtils.h
src/collision/: box.cpp  box.h  collisionObject.h  plane.cpp  plane.h  sphere.cpp  sphere.h
website/: index.html
